<resources>
    <string name="app_name">flexbillet</string>
    <string name="title_activity_login_screen">Login_screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Welcome screen -->
    <string name="version">Flexcheckin Mobile v1.0</string>
    <string name="welcome">Welcome!</string>
    <string name="support">Support:</string>
    <string name="Link">support@flexminds.dk</string>
    <string name="getstarted">GET STARTED</string>
    <string name="connect">Connect</string>
    <string name="organizer_Key">Organizer Key</string>
    <string name="passphrase">Passphrase</string>
    <string name="login">Login</string>
    <string name="select_event_tickect_type">Select Events/Ticket Types</string>
    <string name="start_scanning">START SCANNING</string>
    <string name="menu">Menu</string>
    <string name="select_event_tickects">SELECT EVENTS/TICKETS</string>
    <string name="setting">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="cancel">Cancel</string>
    <string name="scan_history">Scan History</string>
    <string name="ticket_scanning">Ticket Scanning</string>
    <string name="search">Search</string>
    <string name="order_ref_">Order Ref./Cutomer Name/Email/Phone</string>
    <string name="statuss">Status</string>
    <string name="expected_guests">Expected Guests</string>
    <string name="scanned_tickets">Scanned Tickets</string>
    <string name="internet_connectivity">Internet Connectivity</string>
    <string name="how_to_connect">How to Connect</string>
    <string name="detail_info">Connect to the flexbillet system by scanning the QR-code shown on your API page in your organizer profile or by entering your Organizer Key and Passphrase found on the same page</string>
    <string name="got_it">GOT IT</string>
    <string name="settingg">SETTINGS</string>
    <string name="sound">Sound</string>
    <string name="flash">Camera Flash</string>
    <string name="clear_list">Clear Organizer List</string>
    <string name="Select_Tickect_error">Select at least one ticket</string>

</resources>

