<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.Login_with_qr">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:textColor="#F7931E"
        android:textSize="28sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="26dp"
        android:text="@string/organizer_Key"
        android:textSize="18sp" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_input_field"
        android:layout_marginRight="25dp"
        android:paddingLeft="10dp"
        android:textColor="#F7931E"
        android:hint="@string/organizer_Key"
        android:textColorHint="@color/indicator_4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:imeOptions="actionDone"
        android:layout_marginLeft="25dp"
        android:textSize="15sp" />



    <TextView
        android:text="@string/passphrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="19dp"
        android:id="@+id/textView9"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="10dp"
        android:id="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/text_input_field"
        android:paddingLeft="10dp"
        android:imeOptions="actionDone"
        android:textSize="15sp"
        android:textColorHint="@color/indicator_4"
        android:textColor="#F7931E"
        android:hint="@string/passphrase" />

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="51dp"
        android:id="@+id/button"
        android:background="@drawable/orange_buttonn"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textColor="@color/white"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

</RelativeLayout>
