<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/Rlv_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/drawable_border_mobile_dialogue">

        <Button
            android:id="@+id/button8"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:text="Setting"
            android:textColor="#fff"
            android:textSize="19sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button7"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:text="@string/setting"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Rlv_header"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:text="@string/select_event_tickects"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button8"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:text="@string/logout"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/Rlv_header"
            android:layout_width="match_parent"

            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/swipe_dots_orenge">

            <TextView
                android:id="@+id/txtvw_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/menu"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="normal|bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_confirm"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button5"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:text="@string/cancel"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />


    </RelativeLayout>
</RelativeLayout>



