<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/Rlv_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/drawable_border_mobile_dialogue">

        <RelativeLayout
            android:id="@+id/Rlv_header"
            android:layout_width="match_parent"

            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/swipe_dots_orenge">

            <TextView
                android:id="@+id/txtvw_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/how_to_connect"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="normal|bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_confirm"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/rounded_corner"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:text="@string/got_it"
            android:textColor="#fff"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="21dp"
            android:text="@string/detail_info"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp"
            android:layout_below="@+id/Rlv_header"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />


    </RelativeLayout>
</RelativeLayout>



