<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@drawable/bg_for_setting">

    <Button
        android:id="@+id/button6"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/relativeLayouttt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_corner"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:text="@string/cancel"
        android:textColor="#fff"
        android:textSize="19sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relativeLayouttt"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/textView2111"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/clear_list"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"

        android:text="@string/settingg"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp">

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:background="@drawable/tooggle_background"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/toggleButton2"
            android:layout_toStartOf="@+id/toggleButton2"
            android:background="@drawable/toggle_off"
            android:textOff=""
            android:textOn="" />

        <RelativeLayout
            android:id="@+id/relativeLayoutt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toggleButton2"
            android:layout_marginTop="20dp">

            <ToggleButton
                android:id="@+id/toggleButton3"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/toggleButton22"
                android:layout_toStartOf="@+id/toggleButton22"
                android:background="@drawable/camera_flash_third"
                android:textOff=""
                android:textOn="" />

            <TextView
                android:id="@+id/textView211"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:text="@string/flash"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ToggleButton
                android:id="@+id/toggleButton22"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:background="@drawable/camera_flashsecond"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/toggleButtonn"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/toggleButton3"
                android:layout_toStartOf="@+id/toggleButton3"
                android:background="@drawable/camera_flash"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/relativeLayout"
        android:layout_alignBottom="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/sound"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>
