<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.Status_Fragment">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/Rlv_Container">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="63dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/Rlv_holderrr"
                android:layout_below="@+id/Rlv_holderr"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/textView1999"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView1777"
                    android:layout_alignStart="@+id/textView1777"
                    android:layout_below="@+id/textView1777"
                    android:layout_marginTop="5dp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:src="@drawable/internet_connectivity_online_ico"
                    android:id="@+id/imageView1000"

                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:text="@string/internet_connectivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1777"
                    android:textSize="20sp"

                    android:layout_marginLeft="22dp"
                    android:layout_alignTop="@+id/imageView1000"
                    android:layout_toRightOf="@+id/imageView1000"
                    android:layout_toEndOf="@+id/imageView1000" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/Rlv_holder">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/expected_guests_ico"
                    android:id="@+id/imageView10"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView17"
                    android:layout_alignStart="@+id/textView17"
                    android:layout_below="@+id/textView17"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:text="@string/expected_guests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17"
                    android:textSize="20sp"

                    android:layout_marginTop="16dp"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageView10"
                    android:layout_toEndOf="@+id/imageView10"
                    android:layout_marginLeft="20dp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/Rlv_holderr"
                android:layout_below="@+id/Rlv_holder"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/scanned_tickets_ico"
                    android:id="@+id/imageView100"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/textView199"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView177"
                    android:layout_alignStart="@+id/textView177"
                    android:layout_below="@+id/textView177"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:text="@string/scanned_tickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView177"
                    android:textSize="20sp"

                    android:layout_marginTop="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageView100"
                    android:layout_toEndOf="@+id/imageView100"
                    android:layout_marginLeft="20dp" />


            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statuss"
            android:textColor="#F7931E"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:layout_marginTop="19dp"
            android:layout_marginLeft="30dp"
            android:layout_alignParentTop="true"
            />
    </RelativeLayout>
</RelativeLayout>
